🔨 [init] init git repository